[package]
name = "r_tpl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
lazy_static = "1"
anyhow = "1"
thiserror = "1"
parking_lot = "0.12"
tokio = { version = "1", features = ["full"] }
once_cell = "1.12.0"
petgraph = { version = "0.6", features = ["graphmap", "matrix_graph", "stable_graph"] }
futures = { version = "0.3" }

